// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Code used in the Readme.md Can create the config 1`] = `
Object {
  "instance": Object {
    "host": Object {
      "hostname": "localhost",
      "protocol": "http",
    },
    "port": 8080,
  },
  "isProductionEnv": false,
  "serverSecret": "123abc",
}
`;

exports[`Code used in the Readme.md Can react to NODE_ENV 1`] = `
Object {
  "instance": Object {
    "host": Object {
      "hostname": "localhost",
      "protocol": "http",
    },
    "port": 8080,
  },
  "isProductionEnv": true,
  "serverSecret": "123abc",
}
`;

exports[`Code used in the Readme.md Works as expected with the example 1`] = `
Object {
  "instance": Object {
    "host": Object {
      "hostname": "example.com",
      "protocol": "http",
    },
    "port": 8080,
  },
  "isProductionEnv": true,
  "serverSecret": "123abc",
}
`;

exports[`Code used in the Readme.md Works as expected with the example 2`] = `
Object {
  "instance": Object {
    "host": Object {
      "hostname": "example.com",
      "protocol": "http",
    },
    "port": 6000,
  },
  "isProductionEnv": true,
  "serverSecret": "my-new-secret",
}
`;

exports[`Code used in the Readme.md Works as expected with the example 3`] = `
Object {
  "instance": Object {
    "host": Object {
      "hostname": "example.com",
      "protocol": "http",
    },
    "port": 3000,
  },
  "isProductionEnv": true,
  "serverSecret": "my-new-secret",
}
`;
